--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-
-
-
     <application
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,6 +18,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sejong2WasherTimer"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.SettingScreen"
+            android:exported="false"
+            android:label="@string/title_activity_setting_screen"
+            android:theme="@style/Theme.Sejong2WasherTimer" />
+        <activity
+            android:name=".ui.CardChargeScreen"
+            android:exported="false"
+            android:label="@string/title_activity_card_charge_screen"
+            android:theme="@style/Theme.Sejong2WasherTimer" />
+        <activity
+            android:name=".ui.theme.HomeScreen"
+            android:exported="false"
+            android:label="@string/title_activity_home_screen"
+            android:theme="@style/Theme.Sejong2WasherTimer" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -41,14 +53,13 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
             android:value="false" />
         <meta-data
             android:name="firebase_analytics_collection_enabled"
             android:value="false" />
-
-
     </application>
 
 </manifest>
